--- a/SubgenreSheetBot/SubgenreSheetBot.csproj
+++ b/SubgenreSheetBot/SubgenreSheetBot.csproj
@@ -4,7 +4,7 @@
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp3.1</TargetFramework>
         <LangVersion>8</LangVersion>
-        <AssemblyVersion>1.2.1</AssemblyVersion>
+        <AssemblyVersion>1.3.0</AssemblyVersion>
     </PropertyGroup>
 
     <ItemGroup>
@@ -14,6 +14,12 @@
       <PackageReference Include="SpotifyAPI.Web" Version="6.0.0-beta.6" />
       <PackageReference Include="SpotifyAPI.Web.Auth" Version="6.0.0-beta.6" />
       <PackageReference Include="XDiscordBotLib" Version="1.1.4" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="logo_mau5trap.jpg">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
