--- a/SubgenreSheetBot/SubgenreSheetBot.csproj
+++ b/SubgenreSheetBot/SubgenreSheetBot.csproj
@@ -4,7 +4,7 @@
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp3.1</TargetFramework>
         <LangVersion>8</LangVersion>
-        <AssemblyVersion>1.15.0</AssemblyVersion>
+        <AssemblyVersion>1.16.0</AssemblyVersion>
     </PropertyGroup>
 
     <ItemGroup>
@@ -48,6 +48,10 @@
       <None Update="logo_YUKU.jpg">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\BeatportApi\BeatportApi.csproj" />
     </ItemGroup>
 
 </Project>
