--- a/SubgenreSheetBot/SubgenreSheetBot.csproj
+++ b/SubgenreSheetBot/SubgenreSheetBot.csproj
@@ -4,7 +4,7 @@
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp3.1</TargetFramework>
         <LangVersion>8</LangVersion>
-        <AssemblyVersion>1.16.1</AssemblyVersion>
+        <AssemblyVersion>1.16.2</AssemblyVersion>
     </PropertyGroup>
 
     <ItemGroup>
@@ -14,7 +14,7 @@
       <PackageReference Include="MusicTools" Version="1.4.7" />
       <PackageReference Include="SpotifyAPI.Web" Version="6.1.0" />
       <PackageReference Include="SpotifyAPI.Web.Auth" Version="6.1.0" />
-      <PackageReference Include="XDiscordBotLib" Version="1.1.7" />
+      <PackageReference Include="XDiscordBotLib" Version="1.1.8" />
     </ItemGroup>
 
     <ItemGroup>
@@ -52,6 +52,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\BeatportApi\BeatportApi.csproj" />
+      <ProjectReference Include="..\Common\Common.csproj" />
     </ItemGroup>
 
 </Project>
