--- a/BeatportApi/BeatportApi.csproj
+++ b/BeatportApi/BeatportApi.csproj
@@ -48,25 +48,44 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="Beatport.cs" />
-        <Compile Include="BeatportArtistSummary.cs" />
-        <Compile Include="BeatportBpmRange.cs" />
-        <Compile Include="BeatportChordSummary.cs" />
-        <Compile Include="BeatportExclusiveSummary.cs" />
-        <Compile Include="BeatportGenreSummary.cs" />
-        <Compile Include="BeatportImage.cs" />
-        <Compile Include="BeatportKeySummary.cs" />
-        <Compile Include="BeatportLabelSummary.cs" />
-        <Compile Include="BeatportPrice.cs" />
-        <Compile Include="BeatportRelease.cs" />
-        <Compile Include="BeatportReleaseSummary.cs" />
-        <Compile Include="BeatportReleaseType.cs" />
-        <Compile Include="BeatportResponse.cs" />
-        <Compile Include="BeatportSaleTypeSummary.cs" />
-        <Compile Include="BeatportStatusSummary.cs" />
-        <Compile Include="BeatportStream.cs" />
-        <Compile Include="BeatportSubgenreSummary.cs" />
-        <Compile Include="BeatportTrack.cs" />
+        <Compile Include="Beatport\Beatport.cs" />
+        <Compile Include="Beatport\BeatportArtistSummary.cs" />
+        <Compile Include="Beatport\BeatportBpmRange.cs" />
+        <Compile Include="Beatport\BeatportChordSummary.cs" />
+        <Compile Include="Beatport\BeatportExclusiveSummary.cs" />
+        <Compile Include="Beatport\BeatportGenreSummary.cs" />
+        <Compile Include="Beatport\BeatportImage.cs" />
+        <Compile Include="Beatport\BeatportKeySummary.cs" />
+        <Compile Include="Beatport\BeatportLabelSummary.cs" />
+        <Compile Include="Beatport\BeatportPrice.cs" />
+        <Compile Include="Beatport\BeatportRelease.cs" />
+        <Compile Include="Beatport\BeatportReleaseSummary.cs" />
+        <Compile Include="Beatport\BeatportReleaseType.cs" />
+        <Compile Include="Beatport\BeatportResponse.cs" />
+        <Compile Include="Beatport\BeatportSaleTypeSummary.cs" />
+        <Compile Include="Beatport\BeatportStatusSummary.cs" />
+        <Compile Include="Beatport\BeatportStream.cs" />
+        <Compile Include="Beatport\BeatportSubgenreSummary.cs" />
+        <Compile Include="Beatport\BeatportTrack.cs" />
+        <Compile Include="Beatsource\BeatsourceArtistSummary.cs" />
+        <Compile Include="Beatsource\BeatsourceBpmRange.cs" />
+        <Compile Include="Beatsource\BeatsourceChordSummary.cs" />
+        <Compile Include="Beatsource\BeatsourceExclusiveSummary.cs" />
+        <Compile Include="Beatsource\BeatsourceGenreSummary.cs" />
+        <Compile Include="Beatsource\BeatsourceImage.cs" />
+        <Compile Include="Beatsource\BeatsourceKeySummary.cs" />
+        <Compile Include="Beatsource\BeatsourceLabelSummary.cs" />
+        <Compile Include="Beatsource\BeatsourcePrice.cs" />
+        <Compile Include="Beatsource\BeatsourceRelease.cs" />
+        <Compile Include="Beatsource\BeatsourceReleaseSummary.cs" />
+        <Compile Include="Beatsource\BeatsourceReleaseType.cs" />
+        <Compile Include="Beatsource\BeatsourceResponse.cs" />
+        <Compile Include="Beatsource\BeatsourceSaleTypeSummary.cs" />
+        <Compile Include="Beatsource\BeatsourceStatusSummary.cs" />
+        <Compile Include="Beatsource\BeatsourceStream.cs" />
+        <Compile Include="Beatsource\BeatsourceSubgenreSummary.cs" />
+        <Compile Include="Beatsource\BeatsourceTrack.cs" />
+        <Compile Include="Beatsource\Beatsource.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
     <ItemGroup>
