--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -9,7 +9,12 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Discord.Net.Core" Version="2.4.0" />
       <PackageReference Include="RavenDB.Client" Version="3.5.9" />
+      <PackageReference Include="RestSharp" Version="106.11.7" />
+      <PackageReference Include="Serilog" Version="2.10.0" />
+      <PackageReference Include="SpotifyAPI.Web" Version="6.2.0" />
+      <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
     </ItemGroup>
 
 </Project>
