--- a/BeatportApi/BeatportApi.csproj
+++ b/BeatportApi/BeatportApi.csproj
@@ -1,104 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-    <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<Project Sdk="Microsoft.NET.Sdk">
+  
     <PropertyGroup>
-        <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-        <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-        <ProjectGuid>{097F2A68-6EE3-4740-928C-EA7AFF511B62}</ProjectGuid>
-        <OutputType>Library</OutputType>
-        <AppDesignerFolder>Properties</AppDesignerFolder>
-        <RootNamespace>BeatportApi</RootNamespace>
-        <AssemblyName>BeatportApi</AssemblyName>
-        <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-        <FileAlignment>512</FileAlignment>
-        <LangVersion>8</LangVersion>
+        <LangVersion>preview</LangVersion>
+        <TargetFrameworks>net48;net7.0</TargetFrameworks>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
-    <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-        <PlatformTarget>AnyCPU</PlatformTarget>
-        <DebugSymbols>true</DebugSymbols>
-        <DebugType>full</DebugType>
-        <Optimize>false</Optimize>
-        <OutputPath>bin\Debug\</OutputPath>
-        <DefineConstants>DEBUG;TRACE</DefineConstants>
-        <ErrorReport>prompt</ErrorReport>
-        <WarningLevel>4</WarningLevel>
-    </PropertyGroup>
-    <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-        <PlatformTarget>AnyCPU</PlatformTarget>
-        <DebugType>pdbonly</DebugType>
-        <Optimize>true</Optimize>
-        <OutputPath>bin\Release\</OutputPath>
-        <DefineConstants>TRACE</DefineConstants>
-        <ErrorReport>prompt</ErrorReport>
-        <WarningLevel>4</WarningLevel>
-    </PropertyGroup>
+  
     <ItemGroup>
-        <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed">
-          <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
-          <Private>True</Private>
-        </Reference>
-        <Reference Include="RestSharp, Version=106.11.7.0, Culture=neutral, PublicKeyToken=598062e77f915f75">
-          <HintPath>..\packages\RestSharp.106.11.7\lib\net452\RestSharp.dll</HintPath>
-          <Private>True</Private>
-        </Reference>
-        <Reference Include="System" />
-        <Reference Include="System.Core" />
-        <Reference Include="System.Data" />
-        <Reference Include="System.Web" />
-        <Reference Include="System.Xml" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+      <PackageReference Include="RestSharp" Version="107.3.0" />
     </ItemGroup>
-    <ItemGroup>
-        <Compile Include="Beatport\Beatport.cs" />
-        <Compile Include="Beatport\BeatportArtistSummary.cs" />
-        <Compile Include="Beatport\BeatportBpmRange.cs" />
-        <Compile Include="Beatport\BeatportChordSummary.cs" />
-        <Compile Include="Beatport\BeatportExclusiveSummary.cs" />
-        <Compile Include="Beatport\BeatportGenreSummary.cs" />
-        <Compile Include="Beatport\BeatportImage.cs" />
-        <Compile Include="Beatport\BeatportKeySummary.cs" />
-        <Compile Include="Beatport\BeatportLabelSummary.cs" />
-        <Compile Include="Beatport\BeatportPrice.cs" />
-        <Compile Include="Beatport\BeatportRelease.cs" />
-        <Compile Include="Beatport\BeatportReleaseSummary.cs" />
-        <Compile Include="Beatport\BeatportReleaseType.cs" />
-        <Compile Include="Beatport\BeatportResponse.cs" />
-        <Compile Include="Beatport\BeatportSaleTypeSummary.cs" />
-        <Compile Include="Beatport\BeatportStatusSummary.cs" />
-        <Compile Include="Beatport\BeatportStream.cs" />
-        <Compile Include="Beatport\BeatportSubgenreSummary.cs" />
-        <Compile Include="Beatport\BeatportTrack.cs" />
-        <Compile Include="Beatsource\BeatsourceArtistSummary.cs" />
-        <Compile Include="Beatsource\BeatsourceBpmRange.cs" />
-        <Compile Include="Beatsource\BeatsourceChordSummary.cs" />
-        <Compile Include="Beatsource\BeatsourceExclusiveSummary.cs" />
-        <Compile Include="Beatsource\BeatsourceGenreSummary.cs" />
-        <Compile Include="Beatsource\BeatsourceImage.cs" />
-        <Compile Include="Beatsource\BeatsourceKeySummary.cs" />
-        <Compile Include="Beatsource\BeatsourceLabelSummary.cs" />
-        <Compile Include="Beatsource\BeatsourceLogin.cs" />
-        <Compile Include="Beatsource\BeatsourcePrice.cs" />
-        <Compile Include="Beatsource\BeatsourceRelease.cs" />
-        <Compile Include="Beatsource\BeatsourceReleaseSummary.cs" />
-        <Compile Include="Beatsource\BeatsourceReleaseType.cs" />
-        <Compile Include="Beatsource\BeatsourceResponse.cs" />
-        <Compile Include="Beatsource\BeatsourceSaleTypeSummary.cs" />
-        <Compile Include="Beatsource\BeatsourceStatusSummary.cs" />
-        <Compile Include="Beatsource\BeatsourceStream.cs" />
-        <Compile Include="Beatsource\BeatsourceSubgenreSummary.cs" />
-        <Compile Include="Beatsource\BeatsourceTrack.cs" />
-        <Compile Include="Beatsource\Beatsource.cs" />
-        <Compile Include="Properties\AssemblyInfo.cs" />
-    </ItemGroup>
-    <ItemGroup>
-      <None Include="packages.config" />
-    </ItemGroup>
-    <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-    <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-         Other similar extension points exist, see Microsoft.Common.targets.
-    <Target Name="BeforeBuild">
-    </Target>
-    <Target Name="AfterBuild">
-    </Target>
-    -->
+   
+  
 
 </Project>
