--- a/BeatportApi/packages.config
+++ b/BeatportApi/packages.config
@@ -2,4 +2,6 @@
 <packages>
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net48" />
   <package id="RestSharp" version="106.11.7" targetFramework="net48" />
+  <package id="Serilog" version="2.9.0" targetFramework="net48" />
+  <package id="Serilog.Sinks.Console" version="3.1.1" targetFramework="net48" />
 </packages>
