--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -1,7 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <LangVersion>preview</LangVersion>
+        <TargetFrameworks>net48;net7.0</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup>
@@ -9,10 +10,11 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Discord.Net.Core" Version="2.4.0" />
+      <PackageReference Include="Discord.Net.Core" Version="3.5.0" />
       <PackageReference Include="RavenDB.Client" Version="3.5.9" />
-      <PackageReference Include="RestSharp" Version="106.11.7" />
-      <PackageReference Include="Serilog" Version="2.10.0" />
+      <PackageReference Include="RestSharp" Version="107.3.0" />
+      <PackageReference Include="Serilog" Version="2.9.0" />
+      <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
       <PackageReference Include="SpotifyAPI.Web" Version="6.2.0" />
       <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
     </ItemGroup>
