--- a/SubgenreSheetBot/SubgenreSheetBot.csproj
+++ b/SubgenreSheetBot/SubgenreSheetBot.csproj
@@ -2,19 +2,22 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
-        <LangVersion>8</LangVersion>
-        <AssemblyVersion>1.16.9</AssemblyVersion>
+        <TargetFramework>net7.0</TargetFramework>
+        <LangVersion>preview</LangVersion>
+        <AssemblyVersion>1.17.0</AssemblyVersion>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="FuzzySharp" Version="2.0.2" />
       <PackageReference Include="Google.Apis.Sheets.v4" Version="1.51.0.2272" />
-      <PackageReference Include="MetaBrainz.MusicBrainz" Version="3.0.2" />
-      <PackageReference Include="MusicTools" Version="1.4.7" />
-      <PackageReference Include="SpotifyAPI.Web" Version="6.2.0" />
-      <PackageReference Include="SpotifyAPI.Web.Auth" Version="6.2.0" />
-      <PackageReference Include="XDiscordBotLib" Version="1.1.9" />
+      <PackageReference Include="HtmlAgilityPack" Version="1.11.40" />
+      <PackageReference Include="MetaBrainz.MusicBrainz" Version="5.0.0" />
+      <PackageReference Include="MusicTools" Version="1.4.8.1" />
+      <PackageReference Include="Serilog" Version="2.9.0" />
+      <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
+      <PackageReference Include="SpotifyAPI.Web" Version="6.2.2" />
+      <PackageReference Include="SpotifyAPI.Web.Auth" Version="6.2.2" />
+      <PackageReference Include="XDiscordBotLib" Version="1.2.1" />
     </ItemGroup>
 
     <ItemGroup>
