--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <LangVersion>preview</LangVersion>
         <TargetFrameworks>net48;net7.0</TargetFrameworks>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
@@ -11,6 +12,7 @@
 
     <ItemGroup>
       <PackageReference Include="Discord.Net.Core" Version="3.5.0" />
+      <PackageReference Include="HtmlAgilityPack" Version="1.11.42" />
       <PackageReference Include="RavenDB.Client" Version="3.5.9" />
       <PackageReference Include="RestSharp" Version="107.3.0" />
       <PackageReference Include="Serilog" Version="2.9.0" />
