--- a/SubgenreSheetBot/SubgenreSheetBot.csproj
+++ b/SubgenreSheetBot/SubgenreSheetBot.csproj
@@ -13,6 +13,7 @@
     <ItemGroup>
       <PackageReference Include="FuzzySharp" Version="2.0.2" />
       <PackageReference Include="Google.Apis.Sheets.v4" Version="1.51.0.2272" />
+      <PackageReference Include="GraphVizNet" Version="1.0.3" />
       <PackageReference Include="MetaBrainz.MusicBrainz" Version="5.0.0" />
       <PackageReference Include="MusicTools" Version="1.4.8.7" />
       <PackageReference Include="Serilog" Version="2.9.0" />
