--- a/SubgenreSheetBot/SubgenreSheetBot.csproj
+++ b/SubgenreSheetBot/SubgenreSheetBot.csproj
@@ -11,10 +11,12 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="CsvHelper" Version="31.0.0" />
       <PackageReference Include="FuzzySharp" Version="2.0.2" />
       <PackageReference Include="Google.Apis.Sheets.v4" Version="1.51.0.2272" />
       <PackageReference Include="GraphVizNet" Version="1.0.3" />
       <PackageReference Include="MetaBrainz.MusicBrainz" Version="5.0.0" />
+      <PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.0" />
       <PackageReference Include="MusicTools" Version="1.4.8.8" />
       <PackageReference Include="Serilog" Version="2.9.0" />
       <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
